--- a/Titanic_Survival_Prediction.ipynb
+++ b/Titanic_Survival_Prediction.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Anushka-Verma-CODES/Anushka-Verma-CODES/blob/main/Titanic_Survival_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Anushka-Verma-CODES/Titanic-Survival-Prediction/blob/main/Titanic_Survival_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -40,18 +40,6 @@
         "df_test = pd.read_csv(\"test.csv\")\n",
         "test_ids=df_test['PassengerId']"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "id": "JrLqaYVt02gd"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1660,6 +1648,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Random Forest achieves the highest area under the curve (AUC = 0.90), indicating excellent classification ability and generalization."
+      ],
+      "metadata": {
+        "id": "nUk92MaEI8oL"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#AUC Score Comparison\n",
@@ -1708,7 +1705,7 @@
         "    plt.title(f'Confusion Matrix: {models[i][0]}')\n",
         "    plt.xlabel('Predicted')\n",
         "    plt.ylabel('Actual')\n",
-        "    plt.show()\n"
+        "    plt.show()"
       ],
       "metadata": {
         "colab": {
@@ -1781,6 +1778,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "While Random Forest and Decision Tree give flawless results on the current dataset, Logistic Regression offers a good balance between precision and recall and is less likely to overfit. Models like SVM and KNN are less suitable due to poor recall and generalization issues."
+      ],
+      "metadata": {
+        "id": "vWwxqFO7JFyF"
+      }
     }
   ]
 }
